fix(java): close json numeric ownership gaps